        this should permit the full display of comments which are truncated
        because they are too lengthy to fit in the fixed-size placeholder.
      # A "small numerical edits" filter has been created. Sometimes
        monotonous and difficult to casually assess, this filter can allow
        users to skip edits where "only a single numerical value is changed,
        and the magnitude of that change is (0.5 < change < 2.0)" (T#049).   
        
      # There have been reports of user's edit session's dropping, resulting 
        in editing while logged out. This results in privacy loss and community
        confusion. This is believed to be a bug on the WMF server-side.
        However, using the "assert=true" check, STiki can now at least detect
        the error state -- it pops a dialog and forces a restart (T#048). 
      # Due to an WMF API change, we were forced to change the way user
        edit counts are performed. The WMF changed the way pagination is done,
        breaking our earlier parser in some cases. This code was used to 
        determine STiki permissions (>1000 NS0 edits), "don't template 
        the regulars" logic, and non-critical aspects of milestone reporting.
      # Minor improvements to warning increment logic; in particular, better
        handling when duplicate section headers exist.
        
        IN PROG:
        * Adjusting "don't template the regulars" warning?

  * 2014-03-25
      # Emergency release in order to fix login code broken by a small
        WMF change (most of the burden probably falls to STiki for getting
        this incorrect). This update will be forced; that is, older versions
        of the STiki software will show an "upgrade required" message.
      # Changed the "Revision Filter" menu title to "Displayed Edits"
        in order to clear up some abiguity over sub-menu items.
  
  * 2014-02-05
      # The colors and font faces used in the diff presentation panel can